<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/four"
            android:paddingStart="@dimen/four">

            <!-- Habit field -->
            <EditText
                android:id="@+id/edit_habit"
                style="@style/EditorFieldStyle"
                android:hint="@string/habit_title"
                android:inputType="textCapWords" />

            <!-- Extra Info field -->
            <EditText
                android:id="@+id/edit_info"
                style="@style/EditorFieldStyle"
                android:hint="@string/extra_info"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Frequency category -->
    <LinearLayout
        android:id="@+id/container_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/frequency" />

        <!-- Input Field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Frequency drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_frequency"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>

    <!-- Time category -->
    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/time_to_complete" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="@dimen/four"
            android:paddingStart="@dimen/four">

            <!-- Time field -->
            <EditText
                android:id="@+id/edit_time"
                style="@style/EditorFieldStyle"
                android:hint="@string/time_to_complete"
                android:inputType="number" />

            <!-- Units for time (mins) -->
            <TextView
                android:id="@+id/label_time_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/mins" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>